@@ -37,8 +37,48 @@
 #include "solver/Conflict.h"
 
 #include <boost/asio.hpp>
+#include <boost/shared_ptr.hpp>
 
 namespace dmcs {
+
+struct PbsResult
+{
+  PartialBeliefState* pbs;
+  std::size_t session_id;
+
+  PbsResult(PartialBeliefState* p, std::size_t sid)
+    : pbs(p), session_id(sid)
+  {
+  }
+};
+
+typedef std::list<PbsResult> PbsResultList;
+typedef boost::shared_ptr<PbsResultList> PbsResultListPtr;
+
+inline bool
+my_compare(const PbsResult& pbs1, const PbsResult& pbs2)
+{
+  if (*(pbs1.pbs) < *(pbs2.pbs))
+    {
+      return true;
+    }
+  else if (*(pbs1.pbs) == *(pbs2.pbs))
+    {
+      if (pbs1.session_id > pbs2.session_id)
+	{
+	  return true;
+	}
+    }
+  
+  return false;
+}
+
+inline bool
+operator== (const PbsResult& pbs1, const PbsResult& pbs2)
+{
+  return (*(pbs1.pbs) == *(pbs2.pbs));
+}
+
 
 class OutputThread
 {
@@ -58,19 +98,24 @@ private:
   wait_for_trigger(ConcurrentMessageQueue* handler_output_notif);
 
   bool
-  collect_output(MessagingGatewayBC* mg, PartialBeliefStateVecPtr& res, 
-		 VecSizeTPtr& res_sid, std::string& header);
+  collect_output(MessagingGatewayBC* mg, 
+		 //PartialBeliefStateVecPtr& res, 
+		 //VecSizeTPtr& res_sid, 
+		 PbsResultListPtr& res,
+		 std::string& header);
 
   void
   write_result(connection_ptr conn,
-	       PartialBeliefStateVecPtr& res,
-	       VecSizeTPtr& res_sid,
+	       //PartialBeliefStateVecPtr& res,
+	       //VecSizeTPtr& res_sid,
+	       PbsResultListPtr& res,
 	       const std::string& header);
 
   void
   handle_written_header(connection_ptr conn,
-			PartialBeliefStateVecPtr& res,
-			VecSizeTPtr& res_sid);
+			//PartialBeliefStateVecPtr& res,
+			//VecSizeTPtr& res_sid);
+			PbsResultListPtr& res);
 
 private:
   std::size_t pack_size;             // Number of models the invoker expects to get
